Importing SQD and PseudoGen packages.
git-svn-id: http://qmcpack.googlecode.com/svn@6 4bc5593c-822e-11de-b41d-d982dfe7be50

--- a/trunk/src/CMakeLists.txt
+++ b/trunk/src/CMakeLists.txt
@@ -65,7 +65,7 @@ SET(QMCBASEDIR
    ${WFSBASE}
 )
 
-#SUBDIRS(SQD)
-ADD_LIBRARY(qmc ${QMCBASEDIR})
-SUBDIRS(QMC)
+SUBDIRS(SQD PseudoGen)
+#ADD_LIBRARY(qmc ${QMCBASEDIR})
+#SUBDIRS(QMC)
 
