*** empty log message ***
git-svn-id: http://qmcpack.googlecode.com/svn@8 4bc5593c-822e-11de-b41d-d982dfe7be50

--- a/trunk/src/SQD/CMakeLists.txt
+++ b/trunk/src/SQD/CMakeLists.txt
@@ -19,6 +19,7 @@ LINK_LIBRARIES(${QWT_LIBRARY} ${QT_LIBRARIES} ${OPENGL_LIBRARIES})
 ENDIF(QT_FOUND) 
 
 SET(HFSRCS 
+  ../OhmmsApp/ProjectData.cpp
   ../Numerics/Clebsch_Gordan.cpp
   ../SQD/SphericalPotential/RadialPotential.cpp
   ../SQD/SphericalPotential/ZOverRPotential.cpp
