*** empty log message ***
git-svn-id: http://qmcpack.googlecode.com/svn@51 4bc5593c-822e-11de-b41d-d982dfe7be50

--- a/trunk/src/QMC/Makefile.am
+++ b/trunk/src/QMC/Makefile.am
@@ -1,25 +1,47 @@
+QMC_COMMON_SRCS =  QMCDriver.cpp\
+VMC.cpp\
+VMC_OPT.cpp\
+MolecuDMC.cpp\
+WaveFunctionTester.cpp\
+../Estimators/ScalarEstimatorManager.cpp \
+QMCApps.cpp
 
+if USE_MOLECUAPPS
+QMC_MOLECU =\
+    ../QMCWaveFunctions/OrbitalBuilderBase.cpp \
+    ../QMCWaveFunctions/AtomicOrbitals/HFAtomicSTOSet.cpp \
+    ../QMCWaveFunctions/AtomicOrbitals/HFAtomicSTOSetBuilder.cpp\
+    ../QMCWaveFunctions/AtomicOrbitals/HeSTOClementiRottie.cpp\
+    ../QMCWaveFunctions/MolecularOrbitals/RadialGridFunctorBuilder.cpp\
+    ../QMCWaveFunctions/MolecularOrbitals/STOMolecularOrbitals.cpp\
+    ../QMCWaveFunctions/MolecularOrbitals/GridMolecularOrbitals.cpp\
+    ../QMCWaveFunctions/MolecularOrbitals/MolecularOrbitalBuilder.cpp\
+    MolecuApps.cpp
+endif
 
-bin_PROGRAMS = qmc
-qmc_SOURCES = qmc.cpp DOMProcessor.cpp \
-     QMCDriver.cpp VMC.cpp DMC.cpp \
-     EstimatorManager.cpp \
-  ../Utilities/RandRandom.cpp ../Utilities/RandomGenerator.cpp \
-  ../Utilities/OhmmsObject.cpp \
-  ../Particle/ParticleBase.cpp \
-  ../Particle/MCWalkerConfiguration.cpp \
-  ../Particle/DistanceTable.cpp \
-  ../QMCHamiltonians/QMCHamiltonianBase.cpp \
-  ../QMCWaveFunctions/HFAtomicSTOSet.cpp \
-  ../QMCWaveFunctions/HFAtomicSTOSet.IO.cpp \
-  ../QMCWaveFunctions/HeSTOClementiRottie.cpp \
-  ../QMCWaveFunctions/RadialGridFunctorBuilder.cpp \
-  ../QMCWaveFunctions/MOSonRadialGrid.cpp \
-  ../QMCWaveFunctions/MOSwithSTO.cpp \
-  ../QMCWaveFunctions/MolecularOrbitalBuilder.cpp \
-  ../QMCWaveFunctions/TrialWaveFunction.cpp \
-  ../QMCWaveFunctions/TrialWaveFunctionBuilder.cpp
+#if USE_QDAPPS
+#QMC_QD = \
+#   ../QMCWaveFunctions/OrbitalBuilderBase.cpp \
+#    ../Numerics/Spline3D/Grid1D.cpp \
+#    ../Numerics/Spline3D/Grid3D.cpp \
+#    ../Numerics/Spline3D/CubicSpline.cpp \
+#    ../Numerics/Spline3D/TriCubicSpline.cpp \
+#    ../Numerics/Spline3D/TriCubicSplineSet.cpp \
+#    ../QMCWaveFunctions/TriCubicSplineBuilder.cpp \
+#    ../QMCWaveFunctions/QDwfBuilder.cpp \
+#    ../QMCWaveFunctions/QDwf.cpp \
+#    QDApps.cpp \
+#endif
+
+bin_PROGRAMS = qmcapp
+qmcapp_SOURCES = \
+$(QMC_MOLECU) \
+$(QMC_QD) \
+$(QMC_COMMON_SRCS)\
+main.cpp
 
 INCLUDES = -I$(top_srcdir)/src
-LDADD = -llapack -lblas -lg2c -lxml2 -lhdf5 -lz
+qmcapp_LDADD = @QMCBASE_LIBS@ 
+qmcapp_LDFLAGS = @LDFLAGS@ 
+qmcapp_DEPENDENCIES = ${top_builddir}/src/libqmcbase.a
 
