*** empty log message ***
git-svn-id: http://qmcpack.googlecode.com/svn@65 4bc5593c-822e-11de-b41d-d982dfe7be50

--- a/trunk/CMakeLists.txt
+++ b/trunk/CMakeLists.txt
@@ -97,9 +97,11 @@ IF(QMC_MPI)
   INCLUDE(${PROJECT_SOURCE_DIR}/CMake/addMPI.cmake)
 ENDIF(QMC_MPI)
  
-IF(QMC_SPRNG)
-  INCLUDE(${PROJECT_SOURCE_DIR}/CMake/addSPRNG.cmake)
-ENDIF(QMC_SPRNG)
+IF(FOUND_SPRNG)
+  SET(HAVE_LIBSPRNG 1)
+  INCLUDE_DIRECTORIES(${SPRNG_INCLUDE_DIR})
+  LINK_LIBRARIES(${SPRNG_LIBRARY} -lgmp)
+ENDIF(FOUND_SPRNG)
  
 INCLUDE_DIRECTORIES(
   ${qmcPlusPlus_SOURCE_DIR}/src
