*** empty log message ***
git-svn-id: http://qmcpack.googlecode.com/svn@73 4bc5593c-822e-11de-b41d-d982dfe7be50

--- a/trunk/src/QMC/CMakeLists.txt
+++ b/trunk/src/QMC/CMakeLists.txt
@@ -46,6 +46,12 @@ SET(QMCSRCS
   main.cpp
 )
 
-LINK_LIBRARIES(${FORTRAN_LIBS} ${LAPACK_LIBRARY} ${BLAS_LIBRARY} ${BLAS_EXTRA_LIBRARY})
+LINK_LIBRARIES(${FORTRAN_LIBS} 
+${LAPACK_LIBRARY} 
+${BLAS_LIBRARY} 
+${BLAS_EXTRA_LIBRARY}
+${CMAKE_THREAD_LIBS_INIT}
+)
+
 ADD_EXECUTABLE(qmcapp ${WAVEFUNCTIONS} ${QMCSRCS})
 TARGET_LINK_LIBRARIES(qmcapp qmcbase qmc)
