WOS + many changes in MCWalkerConfiguration for branching.
git-svn-id: http://qmcpack.googlecode.com/svn@94 4bc5593c-822e-11de-b41d-d982dfe7be50

--- a/trunk/src/QMC/CMakeLists.txt
+++ b/trunk/src/QMC/CMakeLists.txt
@@ -14,6 +14,8 @@ IF(QMCAPPS MATCHES "MolecuApps")
     ../QMCWaveFunctions/MolecularOrbitals/STOMolecularOrbitals.cpp
     ../QMCWaveFunctions/MolecularOrbitals/GridMolecularOrbitals.cpp
     ../QMCWaveFunctions/MolecularOrbitals/MolecularOrbitalBuilder.cpp
+    ../QMCHamiltonians/WOS/Device.cpp
+    ../QMCHamiltonians/WOS/WOSPotential.cpp
   )
   SET(APPSRC MolecuApps.cpp)
 ENDIF(QMCAPPS MATCHES "MolecuApps")
