VMC using particle-by-particle update. Need more testing but the design is complete so that one can run VMC with the new update method. DMC will be implemented.
git-svn-id: http://qmcpack.googlecode.com/svn@121 4bc5593c-822e-11de-b41d-d982dfe7be50

--- a/trunk/src/QMC/CMakeLists.txt
+++ b/trunk/src/QMC/CMakeLists.txt
@@ -14,6 +14,8 @@ IF(QMCAPPS MATCHES "MolecuApps")
     ../QMCWaveFunctions/MolecularOrbitals/STOMolecularOrbitals.cpp
     ../QMCWaveFunctions/MolecularOrbitals/GridMolecularOrbitals.cpp
     ../QMCWaveFunctions/MolecularOrbitals/MolecularOrbitalBuilder.cpp
+    ../QMCHamiltonians/CorePolPotential.cpp
+    ../QMCHamiltonians/LocalPPotential.cpp
     ../QMCHamiltonians/WOS/Device.cpp
     ../QMCHamiltonians/WOS/WOSPotential.cpp
   )
@@ -39,6 +41,7 @@ ENDIF(QMCAPPS MATCHES "QDApps")
 SET(QMCSRCS 
   QMCDriver.cpp
   VMC.cpp
+  VMCParticleByParticle.cpp
   VMC_OPT.cpp
   MolecuDMC.cpp
   WaveFunctionTester.cpp
