change order or qmc and qmcbase libraries
git-svn-id: http://qmcpack.googlecode.com/svn@128 4bc5593c-822e-11de-b41d-d982dfe7be50

--- a/trunk/src/QMC/CMakeLists.txt
+++ b/trunk/src/QMC/CMakeLists.txt
@@ -59,4 +59,4 @@ ${CMAKE_THREAD_LIBS_INIT}
 )
 
 ADD_EXECUTABLE(qmcapp ${WAVEFUNCTIONS} ${QMCSRCS})
-TARGET_LINK_LIBRARIES(qmcapp qmcbase qmc)
+TARGET_LINK_LIBRARIES(qmcapp qmc qmcbase)
