First test of ReptationMC  is completed.
git-svn-id: http://qmcpack.googlecode.com/svn@133 4bc5593c-822e-11de-b41d-d982dfe7be50

--- a/trunk/src/QMC/CMakeLists.txt
+++ b/trunk/src/QMC/CMakeLists.txt
@@ -44,6 +44,7 @@ SET(QMCSRCS
   VMCParticleByParticle.cpp
   VMC_OPT.cpp
   MolecuDMC.cpp
+  ReptationMC.cpp
   WaveFunctionTester.cpp
   ../Estimators/ScalarEstimatorManager.cpp
   QMCApps.cpp
