Add BITS to work with both 32/64 bit systems.
git-svn-id: http://qmcpack.googlecode.com/svn@163 4bc5593c-822e-11de-b41d-d982dfe7be50

--- a/trunk/CMakeLists.txt
+++ b/trunk/CMakeLists.txt
@@ -5,6 +5,7 @@ SET (LIBRARY_OUTPUT_PATH ${qmcPlusPlus_BINARY_DIR}/lib CACHE PATH "Single output
 SET (EXECUTABLE_OUTPUT_PATH ${qmcPlusPlus_BINARY_DIR}/bin CACHE PATH "Single output directory for building all executables.")
 
 #list of options to determine libraries. First, try to use libraries available
+SET(BITS 32)
 SET(INTEL_COMPILER 0)
 SET(ENABLE_OPENMP 0)
 SET(HAVE_MPI 0)
