Changes due to evaluLog and cleanup.
git-svn-id: http://qmcpack.googlecode.com/svn@212 4bc5593c-822e-11de-b41d-d982dfe7be50

--- a/trunk/src/QMC/CMakeLists.txt
+++ b/trunk/src/QMC/CMakeLists.txt
@@ -59,9 +59,13 @@ SET(QMCSRCS
 LINK_LIBRARIES(${FORTRAN_LIBS} 
 ${LAPACK_LIBRARY} 
 ${BLAS_LIBRARY} 
-${BLAS_EXTRA_LIBRARY}
-${CMAKE_THREAD_LIBS_INIT}
 )
+
+IF(${BLAS_EXTRA_LIBRARY} MATCHES "guide")
+  LINK_LIBRARIES(${BLAS_EXTRA_LIBRARY} ${CMAKE_THREAD_LIBS_INIT})
+ELSE(${BLAS_EXTRA_LIBRARY} MATCHES "guide")
+  LINK_LIBRARIES(${CMAKE_THREAD_LIBS_INIT})
+ENDIF(${BLAS_EXTRA_LIBRARY} MATCHES "guide")
 
 ADD_EXECUTABLE(qmcapp ${WAVEFUNCTIONS} ${QMCSRCS})
 TARGET_LINK_LIBRARIES(qmcapp qmc qmcbase)
