--- a/trunk/src/QMC/CMakeLists.txt
+++ b/trunk/src/QMC/CMakeLists.txt
@@ -43,6 +43,7 @@ ENDIF(QMCAPPS MATCHES "QDApps")
 
 SET(QMCSRCS 
   QMCDriver.cpp
+QMCApps.cpp
   VMC.cpp
   VMCParticleByParticle.cpp
   DMCParticleByParticle.cpp
