Add Any2GridBuilder and Non-local Pseudopotential class.
git-svn-id: http://qmcpack.googlecode.com/svn@265 4bc5593c-822e-11de-b41d-d982dfe7be50

--- a/trunk/src/QMC/CMakeLists.txt
+++ b/trunk/src/QMC/CMakeLists.txt
@@ -14,6 +14,7 @@ IF(QMCAPPS MATCHES "MolecuApps")
     ../QMCWaveFunctions/MolecularOrbitals/RGFBuilderBase.cpp
     ../QMCWaveFunctions/MolecularOrbitals/STO2GridBuilder.cpp
     ../QMCWaveFunctions/MolecularOrbitals/GTO2GridBuilder.cpp
+    ../QMCWaveFunctions/MolecularOrbitals/Any2GridBuilder.cpp
     ../QMCWaveFunctions/MolecularOrbitals/NumericalRGFBuilder.cpp
     ../QMCWaveFunctions/MolecularOrbitals/GridMolecularOrbitals.cpp
     ../QMCWaveFunctions/MolecularOrbitals/MolecularOrbitalBuilder.cpp
