*** empty log message ***
git-svn-id: http://qmcpack.googlecode.com/svn@267 4bc5593c-822e-11de-b41d-d982dfe7be50

--- a/trunk/src/QMCTools/CMakeLists.txt
+++ b/trunk/src/QMCTools/CMakeLists.txt
@@ -27,3 +27,5 @@ ADD_EXECUTABLE(gto2grid ${QMCTOOLS})
 TARGET_LINK_LIBRARIES(gto2grid qmc qmcbase)
 ADD_EXECUTABLE(casino ${CASINO})
 TARGET_LINK_LIBRARIES(casino qmc qmcbase)
+ADD_EXECUTABLE(molinit ../QMCWaveFunctions/OrbitalBuilderBase.cpp Assign.cpp)
+TARGET_LINK_LIBRARIES(molinit qmc qmcbase)
