Test files to check TriCubicSplineT and HDF5 I/O.
git-svn-id: http://qmcpack.googlecode.com/svn@275 4bc5593c-822e-11de-b41d-d982dfe7be50

--- a/trunk/src/QMCTools/CMakeLists.txt
+++ b/trunk/src/QMCTools/CMakeLists.txt
@@ -23,9 +23,15 @@ ${BLAS_EXTRA_LIBRARY}
 ${CMAKE_THREAD_LIBS_INIT}
 )
 
-ADD_EXECUTABLE(gto2grid ${QMCTOOLS})
-TARGET_LINK_LIBRARIES(gto2grid qmc qmcbase)
-ADD_EXECUTABLE(casino ${CASINO})
-TARGET_LINK_LIBRARIES(casino qmc qmcbase)
-ADD_EXECUTABLE(molinit ../QMCWaveFunctions/OrbitalBuilderBase.cpp Assign.cpp)
-TARGET_LINK_LIBRARIES(molinit qmc qmcbase)
+#ADD_EXECUTABLE(gto2grid ${QMCTOOLS})
+#TARGET_LINK_LIBRARIES(gto2grid qmc qmcbase)
+#ADD_EXECUTABLE(casino ${CASINO})
+#TARGET_LINK_LIBRARIES(casino qmc qmcbase)
+#ADD_EXECUTABLE(molinit ../QMCWaveFunctions/OrbitalBuilderBase.cpp Assign.cpp)
+#TARGET_LINK_LIBRARIES(molinit qmc qmcbase)
+ADD_EXECUTABLE(spline spline.cpp)
+TARGET_LINK_LIBRARIES(spline qmc qmcbase)
+ADD_EXECUTABLE(spline3d spline3.cpp)
+TARGET_LINK_LIBRARIES(spline3d qmc qmcbase)
+ADD_EXECUTABLE(spline3d_io spline3_io.cpp)
+TARGET_LINK_LIBRARIES(spline3d_io qmc qmcbase)
