Move headers to QMCDriver.h and remove duplicated headers.
git-svn-id: http://qmcpack.googlecode.com/svn@306 4bc5593c-822e-11de-b41d-d982dfe7be50

--- a/trunk/src/QMC/CMakeLists.txt
+++ b/trunk/src/QMC/CMakeLists.txt
@@ -72,6 +72,5 @@ ENDIF(${BLAS_EXTRA_LIBRARY} MATCHES "guide")
 ADD_EXECUTABLE(qmcapp ${WAVEFUNCTIONS} ${QMCSRCS} main.cpp)
 TARGET_LINK_LIBRARIES(qmcapp qmc qmcbase)
 
-#ADD_EXECUTABLE(mo2grid3d ${WAVEFUNCTIONS} ${QMCSRCS} 
-#MO2Grid3D.cpp mo2grid3d_main.cpp)
-#TARGET_LINK_LIBRARIES(mo2grid3d qmc qmcbase)
+ADD_EXECUTABLE(mo2grid3d ${WAVEFUNCTIONS} ${QMCSRCS} MO2Grid3D.cpp mo2grid3d_main.cpp)
+TARGET_LINK_LIBRARIES(mo2grid3d qmc qmcbase)
