Change casino to convert4qmc and generalize the parser.cpp to handle casino file (gwfn.data) Gaussian check file  (*.Fchk) Gamess xml file (*.xml)
git-svn-id: http://qmcpack.googlecode.com/svn@308 4bc5593c-822e-11de-b41d-d982dfe7be50

--- a/trunk/src/QMCTools/CMakeLists.txt
+++ b/trunk/src/QMCTools/CMakeLists.txt
@@ -13,6 +13,7 @@ SET(CASINO
   ../QMCWaveFunctions/MolecularOrbitals/GTO2GridBuilder.cpp
   QMCGaussianParserBase.cpp
   GaussianFCHKParser.cpp
+  GamesXmlParser.cpp
   CasinoParser.cpp
   parse.cpp
 )
@@ -26,8 +27,8 @@ ${CMAKE_THREAD_LIBS_INIT}
 
 #ADD_EXECUTABLE(gto2grid ${QMCTOOLS})
 #TARGET_LINK_LIBRARIES(gto2grid qmc qmcbase)
-ADD_EXECUTABLE(casino ${CASINO})
-TARGET_LINK_LIBRARIES(casino qmc qmcbase)
+ADD_EXECUTABLE(convert4qmc ${CASINO})
+TARGET_LINK_LIBRARIES(convert4qmc qmc qmcbase)
 #ADD_EXECUTABLE(molinit ../QMCWaveFunctions/OrbitalBuilderBase.cpp Assign.cpp)
 #TARGET_LINK_LIBRARIES(molinit qmc qmcbase)
 ADD_EXECUTABLE(spline spline.cpp)
