*** empty log message ***
git-svn-id: http://qmcpack.googlecode.com/svn@323 4bc5593c-822e-11de-b41d-d982dfe7be50

--- a/trunk/src/CMakeLists.txt
+++ b/trunk/src/CMakeLists.txt
@@ -13,6 +13,7 @@ SET(UTILITIES
   Utilities/OhmmsInfo.cpp 
   OhmmsApp/ProjectData.cpp
   OhmmsApp/RandomNumberControl.cpp
+  Numerics/OhmmsBlas.cpp
   Platforms/sysutil.cpp
 )
 
@@ -65,7 +66,7 @@ SET(QMCBASEDIR
    ${WFSBASE}
 )
 
-#SUBDIRS(SQD PseudoGen)
+#SUBDIRS(SQD)
 ADD_LIBRARY(qmc ${QMCBASEDIR})
 SUBDIRS(QMC)
 SUBDIRS(QMCTools)
