Remove blitz objects.
git-svn-id: http://qmcpack.googlecode.com/svn@324 4bc5593c-822e-11de-b41d-d982dfe7be50

--- a/trunk/src/QMC/CMakeLists.txt
+++ b/trunk/src/QMC/CMakeLists.txt
@@ -58,9 +58,10 @@ SET(QMCSRCS
   ${APPSRC}
 )
 
-LINK_LIBRARIES(${FORTRAN_LIBS} 
+LINK_LIBRARIES(
 ${LAPACK_LIBRARY} 
 ${BLAS_LIBRARY} 
+${FORTRAN_LIBS} 
 )
 
 IF(${BLAS_EXTRA_LIBRARY} MATCHES "guide")
