Bugfixes.  Hamiltonian needs to be generalized.
git-svn-id: http://qmcpack.googlecode.com/svn@356 4bc5593c-822e-11de-b41d-d982dfe7be50

--- a/trunk/src/QMCApp/CMakeLists.txt
+++ b/trunk/src/QMCApp/CMakeLists.txt
@@ -29,9 +29,10 @@ SET(QMCDRIVERS
   ../QMCDrivers/QMCDriver.cpp
   ../QMCDrivers/VMC.cpp
   ../QMCDrivers/VMCParticleByParticle.cpp
-  ../QMCDrivers/DMCParticleByParticle.cpp
+  ../QMCDrivers/VMCMultiple.cpp
   ../QMCDrivers/VMC_OPT.cpp
   ../QMCDrivers/MolecuDMC.cpp
+  ../QMCDrivers/DMCParticleByParticle.cpp
   ../QMCDrivers/ReptationMC.cpp
   ../Estimators/ScalarEstimatorManager.cpp
 )
