--- a/trunk/src/QMCApp/CMakeLists.txt
+++ b/trunk/src/QMCApp/CMakeLists.txt
@@ -47,6 +47,7 @@ SET(MAINSRCS
   ParticleSetPool.cpp
   WaveFunctionPool.cpp
   HamiltonianPool.cpp
+  InitMolecularSystem.cpp
   QMCAppBase.cpp
   QMCMain.cpp
   qmcapp.cpp
