Use ParticleSet to handle electron and ion systems.
git-svn-id: http://qmcpack.googlecode.com/svn@410 4bc5593c-822e-11de-b41d-d982dfe7be50

--- a/trunk/src/QMCTools/CMakeLists.txt
+++ b/trunk/src/QMCTools/CMakeLists.txt
@@ -11,6 +11,7 @@ SET(CASINO
   ../QMCWaveFunctions/OrbitalBuilderBase.cpp
   ../QMCWaveFunctions/MolecularOrbitals/RGFBuilderBase.cpp
   ../QMCWaveFunctions/MolecularOrbitals/GTO2GridBuilder.cpp
+  ../QMCApp/InitMolecularSystem.cpp
   QMCGaussianParserBase.cpp
   GaussianFCHKParser.cpp
   GamesXmlParser.cpp
