Add VMCMultiple, VMCPbyPMultiple and RQMCMultiple.
git-svn-id: http://qmcpack.googlecode.com/svn@433 4bc5593c-822e-11de-b41d-d982dfe7be50

--- a/trunk/src/QMCApp/CMakeLists.txt
+++ b/trunk/src/QMCApp/CMakeLists.txt
@@ -29,13 +29,16 @@ SET(QMCDRIVERS
   ../QMCDrivers/QMCDriver.cpp
   ../QMCDrivers/VMC.cpp
   ../QMCDrivers/VMCParticleByParticle.cpp
-  ../QMCDrivers/VMCMultiple.cpp
-  ../QMCDrivers/VMCPbyPMultiple.cpp
   ../QMCDrivers/VMC_OPT.cpp
   ../QMCDrivers/MolecuDMC.cpp
   ../QMCDrivers/DMCParticleByParticle.cpp
   ../QMCDrivers/ReptationMC.cpp
+  ../QMCDrivers/PolymerEstimator.cpp
   ../Estimators/ScalarEstimatorManager.cpp
+  ../QMCDrivers/VMCMultiple.cpp
+  ../QMCDrivers/VMCPbyPMultiple.cpp
+  ../QMCDrivers/RQMCSymm.cpp
+  ../QMCDrivers/RQMCMultiple.cpp
   ../Estimators/MultipleEnergyEstimator.cpp
 )
 
