Add DummyQMC for testing.
git-svn-id: http://qmcpack.googlecode.com/svn@441 4bc5593c-822e-11de-b41d-d982dfe7be50

--- a/trunk/src/QMCApp/CMakeLists.txt
+++ b/trunk/src/QMCApp/CMakeLists.txt
@@ -27,6 +27,7 @@ SET(WFSRCS
 ####################################
 SET(QMCDRIVERS
   ../QMCDrivers/QMCDriver.cpp
+  ../QMCDrivers/DummyQMC.cpp
   ../QMCDrivers/VMC.cpp
   ../QMCDrivers/VMCParticleByParticle.cpp
   ../QMCDrivers/VMC_OPT.cpp
