Changes due to PBC.
git-svn-id: http://qmcpack.googlecode.com/svn@444 4bc5593c-822e-11de-b41d-d982dfe7be50

--- a/trunk/src/CMakeLists.txt
+++ b/trunk/src/CMakeLists.txt
@@ -18,7 +18,9 @@ SET(UTILITIES
 )
 
 SET(PARTICLE
+  Lattice/Uniform3DGridLayout.cpp 
   Particle/ParticleSet.cpp 
+  Particle/ParticleSet.BC.cpp 
   Particle/MCWalkerConfiguration.cpp 
   Particle/DistanceTable.cpp
   Particle/HDFWalkerIO.cpp
