--- a/trunk/src/ohmms-config.h.cmake.in
+++ b/trunk/src/ohmms-config.h.cmake.in
@@ -47,6 +47,10 @@
 /* Define the base precision: float, double */
 #cmakedefine OHMMS_PRECISION @OHMMS_PRECISION@
 
+/* Define if the code is specialized for orthorhombic supercell */
+#define OHMMS_ORTHO @OHMMS_ORTHO@
+
+/* Define the index of the walker iterator. NOT USED */
 #cmakedefine QMC_FASTWALKER @QMC_FASTWALKER@
 
 #endif // OHMMS_QMC_CONFIGURATION_H
